--- a/arch/arm/dts/rk3288-cmt-cube.dts
+++ b/arch/arm/dts/rk3288-cmt-cube.dts
@@ -12,6 +12,26 @@
     aliases {
         serial2 = &uart2;
     };
+
+    /* 可选：U-Boot logo 显示 timing */
+    display-timings {
+        native-mode = <&timing0>;
+        timing0: timing0 {
+            clock-frequency = <65393216>;
+            hactive = <720>;
+            vactive = <1280>;
+            hsync-len = <20>;
+            hback-porch = <60>;
+            hfront-porch = <60>;
+            vsync-len = <8>;
+            vback-porch = <24>;
+            vfront-porch = <16>;
+            hsync-active = <0>;
+            vsync-active = <0>;
+            de-active = <0>;
+            pixelclk-active = <0>;
+        };
+    };
 };
 
 &uart2 {
@@ -23,19 +43,35 @@
     rk808: pmic@1b {
         compatible = "rockchip,rk808";
         reg = <0x1b>;
-        // ... regulator 配置可简化，或从 kernel dts 复用
         status = "okay";
     };
 };
 
 &lcdc0 {
     status = "okay";
+
+    ports {
+        lcdc_out: port {
+            lcdc_out_ep: endpoint {
+                remote-endpoint = <&dsi_in_ep>;
+                data-mapping = "rgb888";
+            };
+        };
+    };
 };
 
 &mipi_dsi0 {
     status = "okay";
     rockchip,dsi-lanes = <4>;
-    rockchip,dsi-mode = <1>; // video mode
+    rockchip,dsi-mode = <1>;
+
+    ports {
+        dsi_in: port {
+            dsi_in_ep: endpoint {
+                remote-endpoint = <&lcdc_out_ep>;
+            };
+        };
+    };
 };
 
 &sdmmc {
@@ -50,10 +86,4 @@
 
 &pwm0 {
     status = "okay";
-};
-
-&backlight {
-    compatible = "pwm-backlight";
-    pwms = <&pwm0 0 25000>;
-    enable-gpios = <&gpio7 2 GPIO_ACTIVE_HIGH>;
 };
